--- a/shopping/assets/css/style.css
+++ b/shopping/assets/css/style.css
@@ -34,22 +34,59 @@ html{
     text-align: center;
 }
 
-.shopping-cart .container .iconback i{
-	margin-top: 2rem;
+.shopping-cart .container .iconback {
+    padding: 8px 20px;
+    background-color: #222831;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    border: none;
+    width: max-content;
+	margin-top: 3rem;
 	margin-bottom: 0px;
 	text-align: left;
-	color: var(--green);
-	font-size: 5rem;
+	font-size: 1.5rem;
 	position: absolute;
-	border-radius: 50%;
+	border-radius: 20px;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	font-family: 'kanit', sans-serif;
 }
 
-.shopping-cart .container .iconback i:hover{
-	color: #1b7a43;
-	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+.shopping-cart .container .iconback:hover{
+	background-color: var(--green);
 }
 
+.shopping-cart .container .iconback a,
+.shopping-cart .container .iconback i{
+	color: white;
+	text-decoration: none;
+}
+/**
+.shopping-cart .container .iconupdate {
+	padding: 8px 20px;
+	background-color: #222831;
+	-webkit-transition: all 0.3s;
+	transition: all 0.3s;
+	border: none;
+	width: max-content;
+	margin-top: 7rem;
+	margin-bottom: 0px;
+	text-align: right;
+	font-size: 1.5rem;
+	position: absolute;
+	border-radius: 20px;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	font-family: 'kanit', sans-serif;
+}
+
+.shopping-cart .container .iconupdate:hover{
+	background-color: var(--green);
+}
+
+.shopping-cart .container .iconupdate a,
+.shopping-cart .container .iconupdate i{
+	color: white;
+	text-decoration: none;
+}	**/
 .shopping-cart .block-heading p{
 	font-weight: bold;
 	font-family: 'Kanit', sans-serif;
@@ -82,9 +119,21 @@ html{
 .shopping-cart .items .product{
 	margin-bottom: 10px;
 	padding-top: 30px;
-	padding-bottom: 30px;
+	padding-bottom: 15px;
 	padding-left: 40px;
 }
+
+/* Items - Popup Transition 
+.shopping-cart .items .product:hover{
+	transition: all 0.5s;
+	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+	-webkit-transition: all 0.5s;
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+	background-color: #f5f5f5;
+	border-radius: 20px;
+	margin: 1rem;
+} */
 
 .shopping-cart .items .product a i{
 	color: #ff4d4d;
@@ -95,7 +144,6 @@ html{
 
 .shopping-cart .items .product a i:hover{
 	color: #990000;
-	margin-left: 1rem;
 }
 
 
@@ -161,15 +209,18 @@ html{
 	font-family: 'kanit', sans-serif;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-evenly;
+	justify-content: space-around;
+}
+.shopping-cart .summary input{
+	float: left;
+}
+.shopping-cart .logosum img{
+	width: 80%;
+	position: absolute;
+	right: 10%;
+	margin-top: 20px;
 	
 }
-
-.shopping-cart .summary img{
-	margin-bottom: 2rem;
-	width: 75%;
-}
-
 .shopping-cart .summary h3{
 	text-align: center;
 	font-size: 1.3em;
@@ -209,6 +260,15 @@ html{
 	background: #145730;
 }
 
+input#text1{
+	margin-right: 7px;
+	margin-top: 4px;
+}
+
+input#text2{
+	margin-top: 4px;
+	margin-right: 7px;
+}
 
 @media (min-width: 768px) {
 	.shopping-cart .items .product .info {
